# spectroscope

./: .gitattributes  .gitmodules  INSTALL  README.md  meson.build  startSpectroscope
apps/: libcamera_hello.cpp  libcamera_vid.cpp  meson.build
core/: libcamera_app.cpp  libcamera_app.hpp
include/glad/: glad.h
include/learnopengl/: shader_c.h
preview/: drm_preview.cpp  egl_preview.cpp  preview.cpp  preview.hpp  qt_preview.cpp
src/: glad.c
